# burnbox

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  RELEASE.md  build-source.sh  setup-project.sh
docs/: README.md  build.sh  check-weblate.py  pyproject.toml
docs/gettext/: advanced.pot  develop.pot  features.pot  help.pot  index.pot  install.pot  security.pot  sphinx.pot  tor.pot
docs/source/: advanced.rst  conf.py  develop.rst  features.rst  help.rst  index.rst  install.rst  security.rst  tor.rst
docs/source/_templates/: versions.html
docs/source/locale/af/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/am/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/ar/LC_MESSAGES/: advanced.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/ay/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  tor.po
docs/source/locale/be/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/bg/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/bn/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  install.po  security.po  sphinx.po  tor.po
docs/source/locale/bo/LC_MESSAGES/: advanced.po  develop.po  features.po  help.po  index.po  tor.po  (+3 more)
(+628 files in other folders)
