[tool.poetry]
name = "burnbox-docs"
version = "0.1.0"
description = ""
authors = ["BurnBox <support@burnbox.hideaway.chat>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-intl = "*"
httpx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
